Replaces CopperRuntime.jar with CopperCompiler.jar.

--- a/resources/ide_skeleton/plugin/build.properties
+++ b/resources/ide_skeleton/plugin/build.properties
@@ -5,7 +5,7 @@ bin.includes = META-INF/,\
                resource/,\
                .,\
                @LANG_COMPOSED@.jar,\
-               CopperRuntime.jar,\
+               CopperCompiler.jar,\
                SilverRuntime.jar,\
                IDEPluginRuntime.jar,\
                plugin.xml
