--- a/runtime/java/build.xml
+++ b/runtime/java/build.xml
@@ -25,7 +25,7 @@
   </target>
 
   <target name='build' depends='init'>
-    <javac debug='on' classpathref='compile.classpath' srcdir='${src}:${grammars}' destdir='${bin}' includeantruntime='false'>
+    <javac debug='on' classpathref='compile.classpath' srcdir='${src}:${grammars}' destdir='${bin}' includeantruntime='false' source='1.8' target='1.8' release='8'>
       <include name='common/**/*.java' />
       <include name='silver/core/*.java' />
       <include name='silver/xml/ast/*.java' />
