Moves extractCodeBlocks to runtime.
Jenks should fail ableC et al if it ends up being required at runtime,
which I don't _think_ it should be?

--- a/runtime/java/build.xml
+++ b/runtime/java/build.xml
@@ -10,6 +10,7 @@
 
   <path id='compile.classpath'>
     <fileset dir='../../jars' includes='CopperCompiler.jar' />
+    <fileset dir='../../jars' includes='commonmark-0.17.1.jar' />
   </path>
 
   <target name='init'>
