--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,7 @@ runtime/java/bin/
 test/**/test.jar
 test/silver.testing.bin.jar
 test/silver_features/test_out.txt
+tutorials/**/output.c
 
 # Useful spot to stash your experiments
 sandbox
