Fixes to eclipse IDE, since Silver runtime now depends on commonmark jar

--- a/resources/ide_skeleton/plugin/build.properties
+++ b/resources/ide_skeleton/plugin/build.properties
@@ -7,5 +7,6 @@ bin.includes = META-INF/,\
                @LANG_COMPOSED@.jar,\
                CopperCompiler.jar,\
                SilverRuntime.jar,\
+               commonmark-0.17.1.jar,\
                IDEPluginRuntime.jar,\
                plugin.xml
