--- a/runtime/imp/main/pom.xml
+++ b/runtime/imp/main/pom.xml
@@ -75,6 +75,13 @@
               <scope>system</scope>
               <systemPath>${basedir}/../../../jars/CopperCompiler.jar</systemPath>
             </extraClasspathElement>
+            <extraClasspathElement>
+              <groupId>org.commonmark</groupId>
+              <artifactId>commonmark</artifactId>
+              <version>0.17.1</version>
+              <scope>system</scope>
+              <systemPath>${basedir}/../../../jars/commonmark-0.17.1.jar</systemPath>
+            </extraClasspathElement>
           </extraClasspathElements>
         </configuration>
       </plugin>
