--- a/support/vs-code/silverlsp/.vscode/launch.json
+++ b/support/vs-code/silverlsp/.vscode/launch.json
@@ -15,10 +15,7 @@
 			"outFiles": [
 				"${workspaceFolder}/out/**/*.js"
 			],
-			"preLaunchTask": "${defaultBuildTask}",
-			"env": {
-				"JAVA_HOME": "/usr/lib/jvm/java-8-openjdk-amd64/jre/"
-			}
+			"preLaunchTask": "${defaultBuildTask}"
 		},
 		{
 			"name": "Extension Tests",
