--- a/language-server/langserver/pom.xml
+++ b/language-server/langserver/pom.xml
@@ -27,5 +27,10 @@
             <artifactId>copper-runtime</artifactId>
             <version>1.0.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.commonmark</groupId>
+            <artifactId>commonmark</artifactId>
+            <version>0.17.2</version>
+        </dependency>
     </dependencies>
 </project>
