Implement clean build language server command

--- a/support/vs-code/silverlsp/package.json
+++ b/support/vs-code/silverlsp/package.json
@@ -28,6 +28,12 @@
         ],
         "configuration": "./language-configuration.json"
       }
+    ],
+    "commands": [
+      {
+        "command": "silver.clean",
+        "title": "Silver: Clean Silver language server workspace"
+      }
     ]
   },
   "configurationDefaults": {
