--- a/support/vs-code/silverlsp/package.json
+++ b/support/vs-code/silverlsp/package.json
@@ -55,6 +55,7 @@
           },
           "silver.parserName": {
             "type": "string",
+            "default": "silver:compiler:composed:Default:svParse",
             "description": "Full name of the Silver parser to use, must be set if compiler jar is specified"
           }
         }
