--- a/support/vs-code/silverlsp/package.json
+++ b/support/vs-code/silverlsp/package.json
@@ -1,14 +1,24 @@
 {
   "name": "silverlsp",
-  "displayName": "SilverLSP",
+  "displayName": "Silver LSP",
   "description": "Plugin for Silver Language Server Protocol support",
   "version": "0.0.1",
   "engines": {
     "vscode": "^1.67.0"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/melt-umn/silver.git"
+  },
+  "publisher": "MELT",
+  "icon": "silver.png",
   "categories": [
-    "Other"
+    "Programming Languages"
   ],
+  "tags": [
+    "attribute grammar", "parsing", "compiler", "metaprogramming", "extensible language"
+  ],
+  "license": "LGPL-3.0-or-later",
   "activationEvents": [
     "onLanguage:silver"
   ],
