--- a/support/vs-code/silverlsp/package.json
+++ b/support/vs-code/silverlsp/package.json
@@ -66,7 +66,7 @@
           "silver.parserName": {
             "type": "string",
             "default": "silver:compiler:composed:Default:svParse",
-            "description": "Full name of the Silver parser to use, must be set if compiler jar is specified"
+            "description": "Full name of the Silver parser to use"
           }
         }
       }
