--- a/support/vs-code/silverlsp/package.json
+++ b/support/vs-code/silverlsp/package.json
@@ -16,7 +16,11 @@
     "Programming Languages"
   ],
   "tags": [
-    "attribute grammar", "parsing", "compiler", "metaprogramming", "extensible language"
+    "attribute grammar",
+    "parsing",
+    "compiler",
+    "metaprogramming",
+    "extensible language"
   ],
   "license": "LGPL-3.0-or-later",
   "activationEvents": [
@@ -89,6 +93,7 @@
     "test": "node ./out/test/runTest.js"
   },
   "devDependencies": {
+    "@vscode/vsce": "^2.19.0",
     "@types/glob": "^7.2.0",
     "@types/mocha": "^9.1.1",
     "@types/node": "14.x",
