Switches to Nix flakes.
This makes it easier to depend on Silver from other Nix projects. If you
don't use Nix, no breaking change here (so I'm probably the only
affected user...).

--- a/.gitignore
+++ b/.gitignore
@@ -30,8 +30,10 @@ runtime/java/bin/
 test/**/test.jar
 tutorials/**/output.c
 
-# direnv
+# direnv and Nix
 .direnv/
+result
+result-*
 
 # Useful spot to stash your experiments
 sandbox
