--- a/support/vs-code/agnosis/package.json
+++ b/support/vs-code/agnosis/package.json
@@ -36,6 +36,10 @@
       {
         "command": "agnosis.showAttributeValuesHtml",
         "title": "showAttributeValuesHtml"
+      },
+      {
+        "command": "agnosis.showSimpleDebugContext",
+        "title": "showSimpleDebugContext"
       }
     ]
   },
