--- a/runtime/java/build.xml
+++ b/runtime/java/build.xml
@@ -26,7 +26,7 @@
   </target>
 
   <target name='build' depends='init'>
-    <javac debug='on' classpathref='compile.classpath' srcdir='${src}:${grammars}' destdir='${bin}' includeantruntime='false' source='1.8' target='1.8' release='8'>
+    <javac debug='on' classpathref='compile.classpath' srcdir='${src}:${grammars}' destdir='${bin}' includeantruntime='false' release='11'>
       <compilerarg value="-Xlint:unchecked" />
       <include name='common/**/*.java' />
       <include name='silver/core/*.java' />
